force-app/main/default/objects/Client__c/fields/Profile_Status__c.field-meta.xml
<CustomField>
    <fullName>Profile_Status__c</fullName>
    <formula>((IF( ISBLANK( Name ) , 0,20)) +
( IF( ISBLANK(  Client_Email__c  ) ,0,20)) +
(IF( ISBLANK(  Client_DOB__c  ) , 0,20) )+
(IF( ISBLANK(  Client_Address__c  ) , 0,20)) +
(IF(  ISNULL( Client_Phone__c )  , 0,20)))/100</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Profile Status</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>