force-app/main/default/objects/Client__c/validationRules/Validation_Rule_For_Client.validationRule-meta.xml
<ValidationRule>
    <fullName>Validation_Rule_For_Client</fullName>
    <active>true</active>
    <errorConditionFormula>YEAR( Client_DOB__c )  &gt; 2000</errorConditionFormula>
    <errorMessage>DOB Should be less than 2000 Year</errorMessage>
</ValidationRule>